New jsonUtils methods